# phone-butler

./: .env.example  .gitignore  ARCHITECTURE.md  CLOUD_PHONES.md  README.md  pyproject.toml
config/: contacts.yml  devices.yml  rules.yml
playbooks/klar/: check_balance.yml
playbooks/whatsapp/: read_messages.yml
