[project]
name = "phone-butler"
version = "0.1.0"
description = "Personal AI agent that controls your Android phone remotely — voice-activated via VoIP, monitors notifications, executes app actions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
    "anthropic>=0.40",
    "python-telegram-bot>=21",
    "twilio>=9",
    "pyyaml>=6",
    "apscheduler>=3.10",
    "edge-tts>=6",
    "pydantic>=2",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff"]
stt = ["deepgram-sdk>=3", "openai-whisper>=20231117"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
